@@ -40,6 +40,10 @@
       e.g., for reference.group = "A" and treatment comparison "A + B"
       vs "C", the comparison will not be reordered as "C" vs "A + B"
 
+  * netgraph():
+    - arguments 'iterate' and 'allfigures' ignored if argument 'seq'
+      is equal to "optimal"
+
  ** Internal changes **
 
   * netmeta():
